# Neutron

./: .gitignore  AmBe_energy_spect.txt  CHANGELOG_LIGHTYIELD.md  CMakeLists.txt  TOF_ANALYSIS_SUMMARY.md  WhatIdid  ambe_analytic_10cm_bins.csv  ambe_analytic_15cm_bins.csv  ambe_analytic_5cm_bins.csv  ambe_analytic_bins.csv  ambe_points.mac  ambe_spectrum.txt  export_dawn.mac  export_dawn_fixed.mac  export_geometry.mac  export_opengl_stored.mac  geometry_output.gdml  main.cc  neutron_energies_after_hdpe.txt  neutron_energies_after_hdpe_10cm.csv  neutron_energies_after_hdpe_15cm.csv  neutron_energies_after_hdpe_15cm.txt  neutron_energies_after_hdpe_5cm.csv  neutron_energies_after_hdpe_5cm.txt  run.mac  run_short_1k.mac  save_gdml_snapshot.C  save_gdml_snapshot_repo.C  setup_umut.sh
analysis/: plot_mca_edep.py
include/: ActionInitialization.hh  BPlasticSD.hh  DetectorConstruction.hh  EventAction.hh  NaISD.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
macros/: am241.mac  ambe.mac  ambe_1k.mac  ambe_20cm.mac  ambe_spectrum.txt  co60.mac  cs137.mac  cs137_spectrum.txt  init_vis.mac  na22.mac  na22_1k.mac  na22_spectrum.txt  sr90.mac  sr90_1k.mac  sr90_spectrum.txt  test_small.mac
scripts/: PlotGeometry.C  compare_spectra.py  generate_ambe_points.py  make_publication_figure.py  plotAmBe.py  plot_ambe_and_moderation.py  plot_empirical_per_thickness.py  tof_analysis.py
src/: ActionInitialization.cc  BPlasticSD.cc  DetectorConstruction.cc  EventAction.cc  NaISD.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  main.cc
